--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!-- The video -->
 <video autoplay muted loop id="myVideo">
-  <source src="ai.mp4" type="video/mp4">
+  <source src="ai1.mp4" type="video/mp4">
 </video>
 
 </head>
